--- a/chat.html
+++ b/chat.html
@@ -1,54 +1,50 @@
-<html lang="en">
+<html>
 <head>
-  <body BGCOLOR="#f0f4ff">  
-	<meta charset="UTF-10">
-    <meta name="viewport" content="width=device-width, initial-scale=5.0">
-    <title>Chat with Ajeet</title>
+    <title>Simple Chat</title>
     <style>
-        /* Add some basic styling for the chat interface */
         body {
             font-family: Arial, sans-serif;
-            margin: 10;
-            padding: 10;
         }
-        .chat-box {
-            width: 565px;
-            margin: 29px auto;
-            border: 10px solid #ccc;
-            border-radius: 10px;
+        #chat-box {
+            width: 300px;
+            margin: 0 auto;
+            border: 1px solid #ccc;
             padding: 10px;
-        }
-        .chat-log {
-            height: 200px;
             overflow-y: scroll;
-            border: 10px solid #ccc;
-            border-radius: 10px;
-            padding: 10px;
+            height: 300px;
+        }
+        #message-input {
+            width: 300px;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
-    <div class="chat-box">
-        <h2>Chat</h2>
-        <div class="chat-log" id="chat-log">
-            <!-- Chat messages will be displayed here -->
-        </div>
-        <input type="text" id="user-input" placeholder="Type a message..." onkeydown="sendMessage(event)">
-    </div>
+    <div id="chat-box"></div>
+    <input type="text" id="message-input" placeholder="Type your message">
+    <button onclick="sendMessage()">Send</button>
 
     <script>
-        function sendMessage(event) {
-            if (event.key === "Enter") {
-                const userInput = document.getElementById("user-input");
-                const chatLog = document.getElementById("chat-log");
-                const message = userInput.value;
+        const chatBox = document.getElementById("chat-box");
+        const messageInput = document.getElementById("message-input");
+        const websocket = new WebSocket("https://kingkilled.github.io/Bajarangbali-Problem-Solving/index.html");
 
-                // Display user's message in the chat log
-                chatLog.innerHTML += `<div><strong>You:</strong> ${message}</div>`;
-                userInput.value = "";
+        websocket.onmessage = (event) => {
+            const messageDiv = document.createElement("div");
+            messageDiv.textContent = event.data;
+            chatBox.appendChild(messageDiv);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        };
 
-                // You can add logic here to handle responses from a chatbot or another user
+        function sendMessage() {
+            const message = messageInput.value;
+            messageInput.value = "";
+
+            if (message.trim() === "") {
+                return;
             }
+
+            websocket.send(message);
         }
     </script>
 </body>
