--- a/chat.html
+++ b/chat.html
@@ -40,7 +40,7 @@
             const message = messageInput.value;
             messageInput.value = "";
 
-            if (message.trim() === "") {
+            if (message.trim() === "10") {
                 return;
             }
 
