--- a/chat.html
+++ b/chat.html
@@ -1,57 +1,4 @@
-<html lang="en">
-
-<head>
-  <body BGCOLOR="#f0f4ff">  
-	<meta charset="UTF-10">
-    <meta name="viewport" content="width=device-width, initial-scale=5.0">
-    <title>Chat with Ajeet</title>
-    <style>
-        /* Add some basic styling for the chat interface */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 10;
-            padding: 10;
-        }
-        .chat-box {
-            width: 565px;
-            margin: 29px auto;
-            border: 10px solid #ccc;
-            border-radius: 10px;
-            padding: 10px;
-        }
-        .chat-log {
-            height: 200px;
-            overflow-y: scroll;
-            border: 10px solid #ccc;
-            border-radius: 10px;
-            padding: 10px;
-        }
-    </style>
-</head>
-<body>
-    <div class="chat-box">
-        <h2>Chat</h2>
-        <div class="chat-log" id="chat-log">
-            <!-- Chat messages will be displayed here -->
-        </div>
-        <input type="text" id="user-input" placeholder="Type a message..." onkeydown="sendMessage(event)">
-    </div>
-
-    <script>
-        function sendMessage(event) {
-            if (event.key === "Enter") {
-                const userInput = document.getElementById("user-input");
-                const chatLog = document.getElementById("chat-log");
-                const message = userInput.value;
-
-                // Display user's message in the chat log
-                chatLog.innerHTML += `<div><strong>You:</strong> ${message}</div>`;
-                userInput.value = "";
-
-                // servers are not working so Please send your problems on 9648021363 number or on ajeet.shukla1978@gmail.com
-            }
-        }
-    </script>
-</body>
-</html>
+<html>
+	<head><title>SORRY TO SAY BUT SERVER ARE CLOSED FOR SOME UPDATES</title></head>
+	<body>servers are not working so Please send your problems on 9648021363 number or on ajeet.shukla1978@gmail.com</body>
 </html>
