--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ Gender: <input type="radio" id="rmale" name="ugender"> Male
         Submit
     </a>
  </Form>
- <p>After solving please submit 11 rupees on number 9648021363 and for other Problems contact this number only <br>
+ <p>After solving please submit 11 rupees on 9648021363@paytm this goes to hanuman funds<br>
  </body>
  <html>
