--- a/chat.html
+++ b/chat.html
@@ -1,4 +1,4 @@
 <html>
 	<head><title>SORRY TO SAY BUT SERVER ARE CLOSED FOR SOME UPDATES</title></head>
-	<body>servers are not working so Please send your problems on 9648021363 number or on ajeet.shukla1978@gmail.com</body>
+	<body>servers are not working so Please send your problems on ajeet.shukla1978@gmail.com</body>
 </html>
