--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ Gender: <input type="radio" id="rmale" name="ugender"> Male
             cursor: pointer;
         }
     </style>
-    <p>Click the styled button to go to another web page:</p>
+    <p>Click the Submit button to go to another web page:</p>
     <a href="chat.html" class="button-link">
         Submit
     </a>
  </Form>
- <p>After solving please submit 11 rupees on 9648021363@paytm this goes to hanuman funds<br>
+ <p>After solving please submit 11 rupees on 9648021363@paytm this goes to Shri hanuman funds and to mention that problem will be solved within 15 days<br>
  </body>
  <html>
