--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>POBLEM SOLVING</title></head>
+<head><title>PROBLEM SOLVING</title></head>
 <body BGCOLOR="#f0f4ff">
 <h3 aling="center">PROBLEM SOLVING</h3><hr>
 <form name="my form" action="savedata.php" method="post">
