--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="chat-box">
-        <h2>Chat</h2>
+        <h2>Chat with Ajeet</h2>
         <div class="chat-log" id="chat-log">
             <!-- Chat messages will be displayed here -->
         </div>
