--- a/end.html
+++ b/end.html
@@ -1,5 +1,5 @@
 <html>
-<head><titile>END</Title></Head>
+<head><titile>THANKS FOR CHATTING</Title></Head>
 <Body>
 <h1>THANKING YOU<br>
 If any problem there Ajeet here
