--- a/chat.html
+++ b/chat.html
@@ -2,7 +2,8 @@
 
 <head>
   <body BGCOLOR="#f0f4ff">  
-	<meta charset="UTF-10">
+	  <a href="server.jss">
+	  <meta charset="UTF-10">
     <meta name="viewport" content="width=device-width, initial-scale=5.0">
     <title>Chat with Ajeet</title>
     <style>
